--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "contact-similarity",
   "version": "1.0.0",
   "description": "just a script",
+  "scripts": {
+    "start": "node index.js"
+  },
   "main": "index.js",
   "repository": "git@github.com:KaiserPhemi/contact-similarity.git",
   "author": "KaiserPhemi <kaiser.phemi@protonmail.ch>",
