--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "main": "index.js",
   "repository": "git@github.com:KaiserPhemi/contact-similarity.git",
   "author": "KaiserPhemi <kaiser.phemi@protonmail.ch>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "lodash": "^4.17.15"
+  }
 }
